# taled

./: .gitignore  Cargo.toml  TASK.csv  deny.toml  justfile  readme.md  readme_zh-hans.md
apps/taled-editor/: Cargo.toml  Dioxus.toml
apps/taled-editor/android/: MainActivity.kt
apps/taled-editor/src/: android_diag.rs  app.rs  app_state.rs  canvas.rs  canvas_overlay.rs  demo.rs  edit_ops.rs  embedded_samples.rs  icons.rs  l10n.rs  main.rs  mobile_review.rs  mobile_review_styles.rs  platform.rs  screens.rs  selection_ops.rs  session_ops.rs  styles.rs  theme.rs  thumbnails.rs  touch_ops.rs  ui.rs  ui_canvas.rs  ui_inspector.rs  ui_visuals.rs  utdr_thumbs.rs  web_diag.rs  workspace.rs
apps/taled-editor/src/screens/: about.rs  assets_browser.rs  dashboard.rs  dashboard_import.rs  editor.rs  editor_controls.rs  (+10 more)
apps/wishing-editor/: Cargo.toml  Dioxus.toml
apps/wishing-editor/android/: MainActivity.kt
apps/wishing-editor/src/: android_diag.rs  app.rs  app_state.rs  demo.rs  edit_ops.rs  main.rs  mobile_editor.rs  mobile_page_styles.rs  mobile_pages.rs  mobile_review.rs  mobile_review_styles.rs  mobile_shell.rs  mobile_styles.rs  platform.rs  session_ops.rs  styles.rs  touch_ops.rs  ui_canvas.rs  ui_inspector.rs  ui_visuals.rs  web_diag.rs
assets/i18n/: en-US.ftl  zh-Hans.ftl
crates/taled-core/: Cargo.toml
crates/taled-core/src/: lib.rs  model.rs
crates/taled-core/tests/: stage1.rs
crates/wishing-core/: Cargo.toml
crates/wishing-core/src/: session.rs
crates/wishing-core/tests/: stage1.rs
scripts/: ssh-preview.sh  ui_capture_review.js  ui_compare.sh
(+6 files in other folders)
