[package]
name = "wishing-editor"
version = "0.1.0"
edition = "2024"

[dependencies]
wishing-core = { path = "../../crates/wishing-core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
dioxus = { workspace = true, features = ["minimal", "web", "logger"] }
js-sys = "0.3.91"
wasm-bindgen = "0.2.114"
web-sys = { version = "0.3.91", features = [
  "Blob",
  "Document",
  "Element",
  "ErrorEvent",
  "Event",
  "EventTarget",
  "HtmlAnchorElement",
  "HtmlElement",
  "Navigator",
  "Node",
  "PromiseRejectionEvent",
  "Url",
  "Window",
  "console",
] }

[target.'cfg(target_os = "android")'.dependencies]
dioxus = { workspace = true, features = ["minimal", "mobile", "logger"] }
jni = "0.21.1"
ndk-context = "0.1.1"

[target.'cfg(all(not(target_arch = "wasm32"), not(target_os = "android")))'.dependencies]
dioxus = { workspace = true, features = ["minimal", "desktop", "logger"] }
